--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <header>
-      <a href="/">WEBSTUDIO</a>
+      <a href="index.html">WEBSTUDIO</a>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -32,6 +32,7 @@
       </section>
 
       <section>
+        <h2>Our Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -73,7 +74,7 @@
         <ul>
           <li>
             <img
-              src="images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -84,7 +85,7 @@
 
           <li>
             <img
-              src="images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -95,7 +96,7 @@
 
           <li>
             <img
-              src="images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -106,7 +107,7 @@
 
           <li>
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -119,7 +120,7 @@
     </main>
 
     <footer>
-      <a href="/">WEBSTUDIO</a>
+      <a href="index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
