--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   <body>
     <header>
-      <a href="index.html">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="#Studio">Studio</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -53,8 +53,8 @@
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
             </p>
           </li>
 
@@ -120,7 +120,7 @@
     </main>
 
     <footer>
-      <a href="index.html">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
